Squashed 'DbGuardian/foreign_data_wrappers/supabase_wrappers/' changes from d431b9a4..95239dd3
95239dd3 Merge pull request #214 from supabase/j0/add_cognito_wrapper
4c5d8f05 fix: format cognito fdw too
19fa4c73 fix: run rustfmt
a03fe471 fix: return error and use create_async_runtime
cf6c6fe0 fix: handle error
d5acf7b5 fix: convert to datetime and also change naming
35848d87 fix: update READMEs
c30597a9 refactor: do not require endpoint_url
42f50957 Merge pull request #231 from supabase/chore/supabase-wrappers-release-v0.1.17
f87f4bf5 chore: release supabase-wrappers v0.1.17 on crates.io
77e550cb Merge pull request #230 from supabase/chore/supabase-wrappers-release
84973570 chore: release supabase-wrappers v0.1.16 on crates.io
36f1ff99 Merge pull request #228 from supabase/dependabot/cargo/wrappers/shlex-1.3.0
0feef1d1 Merge pull request #229 from supabase/dependabot/cargo/shlex-1.3.0
a0fc2dda fix: update docs
7dbfaf48 feat: cleanup TODOs
006b2a27 fix: second attempt at getting tests to pass, fix docker config
3e67b8ef fix: get tests to pass
5aabe015 fix: create fresh user pool
cf8d6dc7 chore(deps): bump shlex from 1.2.0 to 1.3.0
07e064aa chore(deps): bump shlex from 1.2.0 to 1.3.0 in /wrappers
b0ba72a2 Merge pull request #226 from supabase/dependabot/cargo/h2-0.3.24
922bcb2a chore(deps): bump h2 from 0.3.23 to 0.3.24
c279b298 Merge pull request #225 from supabase/dependabot/cargo/wrappers/h2-0.3.24
b936921f chore(deps): bump h2 from 0.3.21 to 0.3.24 in /wrappers
7d42cb0a feat: add mock users
475c8c20 feat: add docker compose
a7699526 feat: region option
fcc7dcec feat: fix user pool name
f3b11718 fix: add dud userpool name
86090cdf fix: correct naming
3beb7741 fix: update tests
1b05e125 feat: pass through endpoint_url
71021f8c docs: initial docs
5a686834 feat: temp commit with test setup
a3f56685 Update tests.rs
bfaa6691 fix failing clippy warnings in CI
1b27c490 feat: try removing Cargo.lock
25093399 feat: fix more clippy errors
ad608e17 fix: update lock
32d1db58 fi

--- a/wrappers/.ci/docker-compose.yaml
+++ b/wrappers/.ci/docker-compose.yaml
@@ -38,7 +38,17 @@ services:
       interval: 10s
       timeout: 5s
       retries: 20
-
+  cognito:
+    image: jagregory/cognito-local
+    ports:
+      - "9229:9229"
+    volumes:
+      - ../dockerfiles/cognito/.cognito:/app/.cognito
+    healthcheck:
+      test: curl --fail http://0.0.0.0:9229/ || exit 1
+      interval: 11s
+      timeout: 6s
+      retries: 3
   stripe:
     image: stripe/stripe-mock:v0.144.0
     container_name: stripe-mock
