--- a/wrappers/Cargo.toml
+++ b/wrappers/Cargo.toml
@@ -73,6 +73,20 @@ airtable_fdw = [
     "url",
     "thiserror",
 ]
+cognito_fdw = [
+    "aws-sdk-cognitoidentityprovider",
+    "aws-config",
+    "reqwest",
+    "reqwest-middleware",
+    "reqwest-retry",
+    "http",
+    "serde_json",
+    "tokio",
+    "serde",
+    "url",
+    "thiserror",
+    "chrono",
+]
 logflare_fdw = [
     "http",
     "reqwest",
@@ -116,6 +130,7 @@ all_fdws = [
     "auth0_fdw",
     "mssql_fdw",
     "redis_fdw",
+    "cognito_fdw",
 ]
 
 [dependencies]
@@ -129,6 +144,7 @@ clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs", rev = "ecf2
 ], optional = true }
 chrono = { version = "0.4", optional = true }
 chrono-tz = { version = "0.6", optional = true }
+
 
 # for bigquery_fdw, firebase_fdw, airtable_fdw and etc.
 gcp-bigquery-client = { version = "0.17.0", optional = true }
@@ -154,6 +170,11 @@ aws-config = { version = "1.1.1", optional = true }
 aws-sdk-s3 = { version = "1.11.0", optional = true }
 aws-smithy-http = { version = "0.60.1", optional = true }
 aws-smithy-runtime-api = { version = "1.1.1", optional = true }
+
+# for cognito fdw
+aws-sdk-cognitoidentityprovider = {version ="1.10.0", optional = true}
+
+
 csv = { version = "1.2", optional = true }
 tokio = { version = "1", features = ["full"], optional = true }
 tokio-util = { version = "0.7", features = ["full"], optional = true }
