--- a/DbGuardian/obfuscator/Cargo.toml
+++ b/DbGuardian/obfuscator/Cargo.toml
@@ -12,7 +12,7 @@ pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
 pg_test = []
 
 [dependencies]
-pgrx = "^0.11.0"
+pgrx = "=0.11.2"
 lazy_static = "^1.4.0"
 aes = "*"
 typenum = "^1.16.0"
@@ -24,7 +24,7 @@ heapless = "*"
 itertools = "*"
 
 [dev-dependencies]
-pgrx-tests = "^0.11.0"
+pgrx-tests = "=0.11.2"
 
 [profile.dev]
 panic = "unwind"
