[invitation-flow] Fix getdatascopes, and add invitation management

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -233,3 +233,10 @@ RegistryID:
 InviteCustomer:
   - email: string
   - contactName: string
+
+Invitation:
+  - id: string
+  - email: string
+  - contactName: string
+  - status: string
+  - created: string
