[identity-provider-integration] GUI works for superusers

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -240,3 +240,15 @@ Invitation:
   - contactName: string
   - status: string
   - created: string
+
+Auth0Connection:
+  - id: ?string
+  - issuer: string
+  - clientid: string
+  - secret: string
+
+AuthLogin:
+  - domain: string
+  - logo_url: string
+  - primary: string
+  - page_background: string
