[upgrade-versions-03-11] version-upgrades

--- a/web/js/packages/admin/package.json
+++ b/web/js/packages/admin/package.json
@@ -53,6 +53,9 @@
       "last 1 safari version"
     ]
   },
+  "resolutions": {
+    "follow-redirects": "^1.15.5"
+  },  
   "proxy": "http://admin.dymium.local",
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
