--- a/web/js/package.json
+++ b/web/js/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "follow-redirects": "^1.15.5",
+    "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^2.0.6",
     "update-browserslist-db": "^1.0.13"
   }
