--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -53,11 +53,13 @@
     "start": "HTTPS=true DANGEROUSLY_DISABLE_HOST_CHECK=true SSL_CRT_FILE=../../../devcerts/dymium.crt SSL_KEY_FILE=../../../devcerts/dymium.key HOST=portal.dymium.local PORT=3001 react-app-rewired  start",
     "build": "mkdir -p ../../../go/assets/customer && react-app-rewired  build && cp -r build/* ../../../go/assets/customer",
     "test": "jest --silent",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "snyk-auth": "snyk auth",
+    "snyk-scan": "snyk test"    
   },
   "resolutions": {
     "follow-redirects": "^1.15.5"
-  },  
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -92,6 +94,7 @@
     "react-app-rewire-alias": "^1.1.7",
     "react-app-rewired": "^2.2.1",
     "react-scripts": "5.0.1",
+    "snyk": "^1.1283.0",
     "typescript": "^5.0.4"
   },
   "babel": {
