--- a/web/js/packages/admin/package.json
+++ b/web/js/packages/admin/package.json
@@ -55,12 +55,13 @@
   },
   "resolutions": {
     "follow-redirects": "^1.15.5"
-  },  
+  },
   "proxy": "http://admin.dymium.local",
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@types/bootstrap": "^5.1.12",
     "html-loader": "^4.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-scripts": "^5.0.1",
     "typescript": "^5.0.4"
   }
