[upgrade-versions-03-11] update yarn

--- a/web/js/packages/admin/package.json
+++ b/web/js/packages/admin/package.json
@@ -54,7 +54,9 @@
     ]
   },
   "resolutions": {
-    "follow-redirects": "^1.15.5"
+    "follow-redirects": "^1.15.5",
+    "jxLoader/js-yaml": "^3.14.1",
+    "js-yaml": "^3.14.1"
   },
   "proxy": "http://admin.dymium.local",
   "devDependencies": {
