--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -58,7 +58,9 @@
     "snyk-scan": "snyk test"
   },
   "resolutions": {
-    "follow-redirects": "^1.15.5"
+    "follow-redirects": "^1.15.5",
+    "jxLoader/js-yaml": "^3.14.1",
+    "js-yaml": "^3.14.1"
   },
   "browserslist": {
     "production": [
