--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -95,7 +95,7 @@
     "jest": "^29.5.0",
     "react-app-rewire-alias": "^1.1.7",
     "react-app-rewired": "^2.2.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
     "snyk": "^1.1283.0",
     "typescript": "^5.0.4"
   },
