--- a/web/js/package.json
+++ b/web/js/package.json
@@ -20,7 +20,13 @@
     ],
     "plugins": []
   },
+  "resolutions": {
+    "follow-redirects": "^1.15.5",
+    "jxLoader/js-yaml": "^3.14.1",
+    "js-yaml": "^3.14.1"
+  },
   "dependencies": {
+    "browserslist": "^4.23.0",
     "follow-redirects": "^1.15.5",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^2.0.6",
