--- a/web/js/packages/contrib/react-bootstrap-table2-toolkit/package.json
+++ b/web/js/packages/contrib/react-bootstrap-table2-toolkit/package.json
@@ -38,11 +38,13 @@
   ],
   "peerDependencies": {
     "prop-types": "^15.0.0",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "file-saver": "2.0.5"
+    "@babel/core": "^7.24.0",
+    "file-saver": "2.0.5",
+    "postcss": "^8.4.35"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.5",
