--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -9,7 +9,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^1.8.2",
+    "@testing-library/dom": "^9.3.4",
     "@types/node": "^18.16.3",
     "@types/react": "^18.2.0",
     "@types/react-bootstrap-table-next": "^4.0.18",
@@ -21,13 +23,14 @@
     "beautiful-react-hooks": "^4.3.0",
     "bootstrap": "5.2.3",
     "build": "^0.1.4",
-    "enzyme-to-json": "^3.6.2",
     "gsap": "^3.11.5",
     "html-react-parser": "^3.0.15",
     "http-proxy-middleware": "^2.0.6",
     "jest-environment-jsdom": "^29.5.0",
     "lodash": "^4.17.21",
     "multiselect-react-dropdown": "^2.0.22",
+    "postcss": "^8.4.35",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-table-next": "^4.0.3",
@@ -38,15 +41,17 @@
     "react-redux": "^8.0.5",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.11.0",
-    "react-sortable-hoc": "^2.0.0",
     "react-test-renderer": "^18.2.0",
     "react-toggle": "^4.1.3",
+    "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "rxjs": "^7.8.1",
     "sass": "^1.62.1",
     "underscore": "^1.13.1",
     "uuid": "^9.0.0",
     "web-vitals": "^3.3.1",
+    "webpack": "^5.90.3",
     "yarn": "^1.22.21"
   },
   "scripts": {
@@ -56,11 +61,6 @@
     "eject": "react-scripts eject",
     "snyk-auth": "snyk auth",
     "snyk-scan": "snyk test"
-  },
-  "resolutions": {
-    "follow-redirects": "^1.15.5",
-    "jxLoader/js-yaml": "^3.14.1",
-    "js-yaml": "^3.14.1"
   },
   "browserslist": {
     "production": [
@@ -88,16 +88,14 @@
     "@types/jest": "^29.5.1",
     "babel-loader": "^9.1.2",
     "customize-cra": "^1.0.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "html-loader": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "react-app-rewire-alias": "^1.1.7",
     "react-app-rewired": "^2.2.1",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "^5.0.1",
     "snyk": "^1.1283.0",
-    "typescript": "^5.0.4"
+    "typescript": "^4"
   },
   "babel": {
     "presets": [
