--- a/web/js/package.json
+++ b/web/js/package.json
@@ -26,6 +26,8 @@
     "js-yaml": "^3.14.1"
   },
   "dependencies": {
+    "@types/react-redux": "^7.1.33",
+    "@types/redux-thunk": "2.1.0",
     "browserslist": "^4.23.0",
     "follow-redirects": "^1.15.5",
     "http-proxy": "^1.18.1",
