--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -41,11 +41,13 @@
     "react-redux": "^8.0.5",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.11.0",
+    "react-sortable-hoc": "^2.0.0",
     "react-test-renderer": "^18.2.0",
     "react-toggle": "^4.1.3",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
     "rxjs": "^7.8.1",
     "sass": "^1.62.1",
     "underscore": "^1.13.1",
