--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^2.0.2",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@fontsource/roboto": "^4.5.5",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -41,7 +45,6 @@
     "react-redux": "^8.0.5",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.11.0",
-    "react-sortable-hoc": "^2.0.0",
     "react-test-renderer": "^18.2.0",
     "react-toggle": "^4.1.3",
     "redux": "^5.0.1",
