[03-18-updates] updates and upgrades

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,4 @@ Tunnels/go/machineclient/src/go.mod.old
 Tunnels/go/machineclient/src/meshconnector.1.0.1.bak
 Tunnels/go/meshconnector/meshconnector.1.0.0.bak
 setup/aws-update-igor.xsh
+web/js/package-lock.json
