--- a/web/js/package.json
+++ b/web/js/package.json
@@ -11,7 +11,8 @@
     "build": "yarn install && react-scripts build "
   },
   "overrides": {
-    "autoprefixer": "10.4.14"
+    "autoprefixer": "10.4.14",
+    "uglify-js": "^3.17.4"
   },
   "babel": {
     "presets": [
@@ -23,7 +24,8 @@
   "resolutions": {
     "follow-redirects": "^1.15.6",
     "jxLoader/js-yaml": "^3.14.1",
-    "js-yaml": "^3.14.1"
+    "js-yaml": "^3.14.1",
+    "uglify-js": "^3.17.4"
   },
   "dependencies": {
     "@types/react-redux": "^7.1.33",
