--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,5 @@ Tunnels/go/machineclient/src/meshconnector.1.0.1.bak
 Tunnels/go/meshconnector/meshconnector.1.0.0.bak
 setup/aws-update-igor.xsh
 web/js/package-lock.json
+web/go/scripts/yarn.lock
+web/go/scripts/node_modules/.yarn-integrity
