[log-fix] Chnage log messages to prevent potential logging user/pass, move some messages to debug level
Update logging level and disable call logging in ktor

The logging level for the ktDbAnalyzerSvc and DbAnalyzer has been updated from trace to info to reduce verbosity. Call logging dependencies in ktor are commented out in build.gradle and the related method in Application.kt removed. Also, issues have been addressed in the go.sum in the Tunnels/go/server directory.

--- a/ktDbAnalyzerSvc/build.gradle
+++ b/ktDbAnalyzerSvc/build.gradle
@@ -23,8 +23,8 @@ dependencies {
     implementation "io.ktor:ktor-server-core-jvm"
     implementation "io.ktor:ktor-server-content-negotiation-jvm"
     implementation "io.ktor:ktor-serialization-kotlinx-json-jvm"
-    implementation "io.ktor:ktor-server-call-logging-jvm"
-    implementation "io.ktor:ktor-server-call-id-jvm"
+    //implementation "io.ktor:ktor-server-call-logging-jvm"
+    //implementation "io.ktor:ktor-server-call-id-jvm"
     implementation "io.ktor:ktor-server-netty-jvm"
     implementation "ch.qos.logback:logback-core:1.4.14"
     implementation "ch.qos.logback:logback-classic:1.4.14"
