--- a/web/js/package.json
+++ b/web/js/package.json
@@ -12,7 +12,10 @@
   },
   "overrides": {
     "autoprefixer": "10.4.14",
-    "uglify-js": "^3.17.4"
+    "uglify-js": "^3.17.4",
+    "nth-check": "^2.1.1",
+    "minimatch": "^3.1.2",
+    "browserslist": "4.23.0"
   },
   "babel": {
     "presets": [
@@ -30,10 +33,13 @@
   "dependencies": {
     "@types/react-redux": "^7.1.33",
     "@types/redux-thunk": "2.1.0",
-    "browserslist": "^4.23.0",
+    "browserslist": "4.23.0",
     "follow-redirects": "^1.15.5",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^2.0.6",
     "update-browserslist-db": "^1.0.13"
+  },
+  "devDependencies": {
+    "loader-utils": "2.0.4"
   }
 }
