--- a/web/js/packages/portal/package.json
+++ b/web/js/packages/portal/package.json
@@ -33,7 +33,7 @@
     "jest-environment-jsdom": "^29.5.0",
     "lodash": "^4.17.21",
     "multiselect-react-dropdown": "^2.0.22",
-    "postcss": "^8.4.35",
+    "postcss": "8.4.36",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
