S3 pq json csv datasource (#868)
* [s3-pq-json-csv-datasource] Refactoring ktDbAnalyzer to add S3 (parquet, csv and json) data sources

* [s3-pq-json-csv-datasource] Added S3 bucket discovery and parquet schema and sampling methods

* [s3-pq-json-csv-datasource] Added schema inference for json

* [s3-pq-json-csv-datasource] Added sampling for json

* [s3-pq-json-csv-datasource] Add S3 to DbAnalyzer, DbGuardian

* [s3-pq-json-csv-datasource] Fixing s3.sql

* [s3-pq-json-csv-datasource] Fixing bugs,
Added support for csv

* [s3-pq-json-csv-datasource] formatting issue

--- a/DataTypes/Common.yaml
+++ b/DataTypes/Common.yaml
@@ -10,6 +10,7 @@ ConnectionType:
   - DB2        <*> IBM DB2 Database
   - MongoDB    <*> MongoDB Database
   - Elasticsearch <*> Elasticsearch Database
+  - S3 <*> S3 (Parquet, CSV, JSON)
 
 ConnectionPortsType:
   - PostgreSQL_5432
@@ -20,6 +21,7 @@ ConnectionPortsType:
   - DB2_50000
   - MongoDB_27017
   - Elasticsearch_9200
+  - S3_443
 
 GroupMapping:
   - id: ?string
