--- a/ktDbAnalyzerSvc/src/main/resources/application.conf
+++ b/ktDbAnalyzerSvc/src/main/resources/application.conf
@@ -10,7 +10,7 @@ ktor {
 }
 
 datasources {
-    knownDBs = ["postgresql", "oracle", "mysql", "elasticsearch", "db2", "sqlserver", "mongodb", "mariadb"]
+    knownDBs = ["postgresql", "oracle", "mysql", "elasticsearch", "db2", "sqlserver", "mongodb", "mariadb", "s3"]
     postgresql = {
         tableTypes = ["TABLE", "VIEW", "MATERIALIZED VIEW"]
     }
