--- a/ktDbAnalyzerSvc/build.gradle
+++ b/ktDbAnalyzerSvc/build.gradle
@@ -32,8 +32,6 @@ dependencies {
     implementation "io.ktor:ktor-server-core-jvm"
     implementation "io.ktor:ktor-server-content-negotiation-jvm"
     implementation "io.ktor:ktor-serialization-kotlinx-json-jvm"
-    //implementation "io.ktor:ktor-server-call-logging-jvm"
-    //implementation "io.ktor:ktor-server-call-id-jvm"
     implementation "io.ktor:ktor-server-netty-jvm"
     implementation "ch.qos.logback:logback-core:1.4.14"
     implementation "ch.qos.logback:logback-classic:1.4.14"
@@ -50,7 +48,6 @@ dependencies {
     implementation "com.ibm.db2:jcc:11.5.8.0"
     implementation "org.elasticsearch.plugin:x-pack-sql-jdbc:8.12.0"
     implementation 'com.microsoft.sqlserver:mssql-jdbc:12.2.0.jre11'
-    //implementation 'org.mongodb:mongodb-jdbc:2.0.2'
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.4'
 
 
@@ -58,9 +55,9 @@ dependencies {
     implementation("com.michael-bull.kotlin-result:kotlin-result:1.1.18")
 
 
-    implementation("software.amazon.awssdk:s3:2.25.55")
+    implementation("software.amazon.awssdk:s3:2.25.70")
 
-    implementation("log4j:log4j:1.2.17")
+    //implementation("log4j:log4j:1.2.17")
     // Apache Commons Logging
     implementation("commons-logging:commons-logging:1.2")
 
@@ -72,6 +69,12 @@ dependencies {
 
     implementation("com.github.saasquatch:json-schema-inferrer:0.2.1")
     implementation("commons-validator:commons-validator:1.8.0")
+
+    //implementation("org.apache.arrow:arrow-format:16.1.0")
+    //implementation("org.apache.arrow:arrow-vector:16.1.0")
+    //implementation("org.apache.parquet:parquet-arrow:1.14.0")
+
+    implementation("org.apache.parquet:parquet-avro:1.14.0")
 
 
     testImplementation "io.ktor:ktor-server-tests-jvm"
